bdr.BDR2.scala.error
Compilation error:
BDR2:6: error: not found: value getMessage
  var instruction = getMessage();
                    ^BDR2:8: error: not found: value righ
    case "R" => righ(); forward();
                ^